test-devops/k8s/Deployment-test-devops.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-devopsservice-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-devopsservice
  template:
    metadata:
      labels:
        app: test-devopsservice
        deployment: test-devopsservice-v1
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      serviceAccountName: test-devopsservice-sa
      containers:
        - name: test-devopsservice
          image: test-devopsservice:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          # livenessProbe:
          #   httpGet:
          #     port: 8080
          #     path: /actuator/health
          #   initialDelaySeconds: 90
          #   periodSeconds: 5
          # readinessProbe:
          #   httpGet:
          #     port: 8080
          #     path: /actuator/health
          #   initialDelaySeconds: 15
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 10"]
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              memory: 1Gi
