test-devops/k8s/Service-test-devops.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-devopsservice
  labels:
    app: test-devopsservice
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: test-devopsservice
